--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
           sans-serif;
         color: var(--text);
         line-height: 1.6;
-        min-height: 100vh;
 
         /* Full-page background image */
         background: url("https://images.pexels.com/photos/6424585/pexels-photo-6424585.jpeg?auto=compress&cs=tinysrgb&w=2400&h=1400&dpr=1")
@@ -74,6 +73,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        min-height: 100vh; /* full screen */
         width: 100%;
         text-align: center;
         color: #fff;
