--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         font-weight: 600;
         text-decoration: none;
         transition: transform 0.15s ease, filter 0.2s ease;
+        margin-bottom: 10px;
       }
       .btn:hover {
         transform: translateY(-2px);
