--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       /* Paragraphs below heading */
       .hero p {
         max-width: 720px;
-        /* margin: 6px auto; */
+        margin: 6px auto; 
         font-size: clamp(
           1.25rem,
           2vw,
