--- a/index.html
+++ b/index.html
@@ -122,13 +122,33 @@
         font-weight: 600;
         text-decoration: none;
         transition: transform 0.15s ease, filter 0.2s ease;
-        margin-bottom: 10px;
       }
       .btn:hover {
         transform: translateY(-2px);
         filter: saturate(1.05);
       }
       .btn.secondary {
+        background: rgba(255, 255, 255, 0.85);
+        color: #000;
+      }
+
+
+       .btn2 {
+        display: inline-block;
+        background: var(--accent);
+        color: #fff;
+        padding: 12px 20px;
+        border-radius: var(--radius);
+        font-weight: 600;
+        text-decoration: none;
+        transition: transform 0.15s ease, filter 0.2s ease;
+        margin-top: 10px;
+      }
+      .btn2:hover {
+        transform: translateY(-2px);
+        filter: saturate(1.05);
+      }
+      .btn2.secondary {
         background: rgba(255, 255, 255, 0.85);
         color: #000;
       }
@@ -152,8 +172,8 @@
 
       .project iframe {
         width: 100%;
-        height: 300px;
-        max-height: 400px;
+        height: 400px;
+        max-height: 500px;
         border: none;
         border-radius: 12px;
         margin-bottom: 20px;
@@ -253,7 +273,7 @@
             >NTL NeuroCoach Homepage</a
           >
           <a
-            class="btn"
+            class="btn2"
             href="https://github.com/Uncrustable125/Name-Recall-Challenge"
             target="_blank"
             >View on GitHub</a
